add code example

--- a/views/partials/exampleInfo.ejs
+++ b/views/partials/exampleInfo.ejs
@@ -4,8 +4,8 @@
 
 <%- include("docBody") %>
 
-<% if(example.Note) { %>
-    <%- example.Note %>
+<% if(example.Notes) { %>
+    <%- example.Notes %>
 <% } %>
 
 <p>
