--- a/views/partials/submitButton.ejs
+++ b/views/partials/submitButton.ejs
@@ -1,1 +1,1 @@
-<button type="submit" class="btn btn-docu"><%= locals.manifest.SupportingTexts.SubmitButton %></button>
+<button type="submit" class="btn btn-docu"><%= locals.submitButtonText ? submitButtonText : locals.manifest.SupportingTexts.SubmitButton %></button>
