add code examples

--- a/views/pages/index_examples_list.ejs
+++ b/views/pages/index_examples_list.ejs
@@ -23,6 +23,7 @@
                         : api.Name == "ConnectedFields" ? "feg"
                         : api.Name == "Navigator" ? "nav"
                         : api.Name == "Maestro" ? "mae"
+                        : api.Name == "Workspaces" ? "work"
                         : ""; %>
                         
                         <h4
