--- a/views/pages/workspaces-examples/eg002AddDocumentToWorkspace.ejs
+++ b/views/pages/workspaces-examples/eg002AddDocumentToWorkspace.ejs
@@ -16,13 +16,34 @@
 
     <div class="form-group">
       <label for="documentPath"><%= example.Forms[0].Inputs[1].InputName %></label>
-      <input type="file" class="form-control" id="documentPath" placeholder="<%= example.Forms[0].Inputs[1].InputPlaceholder %>" 
+      <input type="file" accept=".pdf" class="form-control" id="documentPath" placeholder="<%= example.Forms[0].Inputs[1].InputPlaceholder %>" 
              name="documentPath" required>
+      <small id="error" class="form-text text-muted"></small>
     </div>
 
     <input type="hidden" name="_csrf" value="<%- csrfToken %>">
     <%- include("../../partials/submitButton") %>
   </form>
+
+  <script>
+    const fileInput = document.getElementById('documentPath');
+    const errorEl = document.getElementById('error');
+
+    fileInput.addEventListener('change', (e) => {
+      const file = fileInput.files[0];
+
+      // Check extension
+      const isPdf = file.name.toLowerCase().endsWith('.pdf');
+      const isPdfMime = file.type === 'application/pdf';
+
+      if (!isPdf || !isPdfMime) {
+        fileInput.value = ''; // reset file input
+        errorEl.textContent = 'Invalid file type. Please upload a PDF file.';
+      } else {
+        errorEl.textContent = ''; // clear any previous errors
+      }
+    });
+  </script>
 <% } else { %>
   <%- formatString(example.RedirectsToOtherCodeExamples[0].RedirectText, formatString('href="work00{0}"', example.RedirectsToOtherCodeExamples[0].CodeExampleToRedirectTo)) %>
   <form class="eg" action="work001" method="get">
