--- a/public/assets/css.css
+++ b/public/assets/css.css
@@ -109,6 +109,10 @@ pre.json-display {
   opacity: unset;
 }
 
+form .form-group .validation-error {
+  color: red !important;
+}
+
 
 /* From http://tobiasahlin.com/spinkit/ */
 .spinner {
